# HeRecord

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/he/demo/record/: MainActivity.kt
app/src/main/res/layout/: main_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/helame/src/main/cpp/: CMakeLists.txt  Lame.cpp
core/helame/src/main/cpp/lame/: util.h
core/helame/src/main/java/com/he/lame/: HeLame.kt
core/hens/: build.gradle.kts
core/hens/src/main/cpp/legacy_agc/: CMakeLists.txt  agc-lib.cpp
core/hens/src/main/cpp/legacy_agc/rtc_base/: checks.cc
core/hens/src/main/cpp/legacy_agc/rtc_base/numerics/: safe_conversions_impl.h
core/hens/src/main/cpp/legacy_ns/: ns-lib.cpp
core/hens/src/main/cpp/legacy_ns/modules/audio_processing/legacy_ns/: ns_core.c
core/hens/src/main/java/com/he/hens/: AutomaticGainControl.kt  NoiseSuppressor.kt
core/herecord/: build.gradle.kts
core/herecord/src/main/java/com/he/herecord/: HeRecord.kt
core/herecord/src/main/java/com/he/herecord/bean/: Formats.kt
core/herecord/src/main/java/com/he/herecord/config/: RecorderConfig.kt
core/herecord/src/main/java/com/he/herecord/core/: AudioRecorder.kt
core/herecord/src/main/java/com/he/herecord/encoder/: Encoder.kt  Mp3Encoder.kt  PcmEncoder.kt  WavEncoder.kt
core/herecord/src/main/java/com/he/herecord/factory/: EncoderFactory.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
